# sv2-tx-generator

./: Cargo.toml  README.md  config.toml
.github/workflows/: regtest-ci.yml
src/: config.rs  generator.rs  lib.rs  main.rs
