[package]
name = "sv2-tx-generator"
description = "Periodically sends Bitcoin transactions to a node using BDK wallet. Supports unit and batch modes. Works with pruned nodes via scantxoutset."
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sv2-tx-generator"
path = "src/main.rs"

[lib]
name = "sv2_tx_generator"
path = "src/lib.rs"

[dependencies]
bdk_wallet = { version = "3.1", features = ["keys-bip39", "rusqlite"] }
bdk_bitcoind_rpc = "0.22"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }